--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-OPENAI_API_KEY=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
-PINECONE_ENV=asia-southeast1-gcp
-PINECONE_API_KEY=869b7326-9d16-4fcc-9a38-d7cfa1ee9b0e
+OPENAI_API_KEY="key"
+PINECONE_ENV="key"
+PINECONE_API_KEY="key"
